# gsocket-relay

./: ChangeLog  LICENSE  Makefile.am  README.md  README2.md  configure.ac
.github/workflows/: release-push.yaml
deploy/: bootup.sh  deploy.sh  gsrn-hb.service  gsrnd.service  gsrnd_start.sh  provision.sh
monitor/: Dockerfile  funcs  heartbeat.sh  ping_gsrn.sh  stats.sh
src/: Makefile.am  cli.c  cli.h  common.h  engine.c  engine.h  engine_cli.c  engine_cli.h  engine_client.c  engine_server.c  gopt.h  gsrn_cli.c  gsrnd-start.sh  gsrnd.c  gsrnd.h  net.c  net.h  packet.c  packet.h  peer.c  peer.h  proto_cli.h  protocol.c  protocol.h  s.c  ssl.c  ssl.h  utils.c  utils.h
