bin_PROGRAMS = gsrnd gsrn_cli

gsrnd_SOURCES = gsrnd.c utils.c net.c engine.c packet.c peer.c protocol.c cli.c engine_cli.c engine_server.c

gsrn_cli_SOURCES = gsrn_cli.c utils.c net.c engine_cli.c packet.c cli.c engine_client.c

noinst_HEADERS = common.h gsrnd.h utils.h net.h engine.h packet.h peer.h protocol.h cli.h gopt.h proto_cli.h engine_cli.h

